[tool.poetry]
name = "random-forests"
version = "0.1.0"
description = ""
authors = ["Matheus Westhelle <matheus.westhelle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.3"

[tool.black]
line-length = 88
target-version = "py38"

[flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
